--- a/boss.ini
+++ b/boss.ini
@@ -20,6 +20,13 @@ before_alert_ment = !
 alert_ment = ドラゴンバレーのダンジョン(地下6階), 안타라스의 동굴 6층
 mungtime = 1
 
+bossname = ラハ (라하), 라하, ラハ, ラーハ
+gentime = 33:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = アデン国境地帯, 아덴 국경지대
+mungtime = 1
+
 bossname = ランドール(란도르), 란도르, ランドール
 gentime = 09:00
 nogencheck = 0
@@ -214,6 +221,13 @@ gentime = 08:00
 nogencheck = 0
 before_alert_ment = !
 alert_ment = クルマ湿地 (巨人の土俵跡の方が早い！), 크루마 습지
+mungtime = 1
+
+bossname = タナトス (타나토스), 타나토스, タナトス
+gentime = 25:00
+nogencheck = 0
+before_alert_ment = !
+alert_ment = 過去の戦場, 과거의 전장
 mungtime = 1
 
 bossname = タラキン(탈라킨), 탈라킨, タラキン
